--- a/Excalidraw/Drawing 2025-11-02 14.53.43.excalidraw.md
+++ b/Excalidraw/Drawing 2025-11-02 14.53.43.excalidraw.md
@@ -10,6 +10,12 @@ tags: [excalidraw]
 # Excalidraw Data
 
 ## Text Elements
+切线 ^NJpEsl3S
+
+割线 ^m4UNpg02
+
+割线 ^KF1w8gs0
+
 ## Embedded Files
 07b31722fa865d03a14e864799a523651f737f7b: $$A$$
 
@@ -64,6 +70,36 @@ d86d57427073e7c3208cd20bf6811b4f1348ec10: $$I_1\omega_1\vec{e}_1$$
 928125e73818f93a9edcb288b21640989cc95f6e: $$\vec{L}$$
 
 765a5f360aa2b2e56a88ee07d4f3d2c83ba3f23e: $$I_2(\omega_2 \vec{e}_2+\omega_3 \vec{e}_3)$$
+
+b219fa45e6017c9c3481534ff8c3920f2f3b31e9: $$\theta$$
+
+87816e8201495d96e2084e955eeadfb60d03a3a5: $$l$$
+
+994a3e42582b6e3bcbb1c61094970ce079eedcdd: $$z$$
+
+73d8fe4e27b685b000180b51e205648bad0bee9c: $$mg$$
+
+3fd3bbc307e703a3b1b2c2f9093bfa883dcab3e4: $$y$$
+
+913a92880a2155edfe3124cdcd4dcaa518b74b87: $$x_0$$
+
+9d58e6c7c5c989f1f1b21c1332c64d0def85a909: $$x_0 + \Delta x$$
+
+6ef3c11ab1a31837d3b96a4a63c00a0e550069ec: $$Q$$
+
+4c7eeb7c9eeacc4602a81201a9bf775ee8d6dae6: $$P$$
+
+eca3b48c3dfa621346b58588010e66661139a487: $$\Delta x$$
+
+84ed3049b7c66e45baf5ed77b1c94e1135b5d5b3: $$\Delta f$$
+
+9fb1347c3ac364c9d5c8a384e2893e82e5ebb4da: $$P$$
+
+ebcabcc37aebcdb2d0c2acd40552b0beb6fbd195: $$Q$$
+
+f7f6c3791535081dc40c96688bfa13b2b5d129b4: $$(x_0, f(x_0))$$
+
+f573390cb79656ef1ba20fee69e2f2a67e0b6231: $$(x_0+\Delta x, f(x_0+\Delta x))$$
 
 69a3dc30b8c0694bf399eae122e892ffc537ec67: [[Pasted image 20251212104425.png]]
 
@@ -264,52 +300,136 @@ Y51buU2VRtRQmbNTZrvXrZapeekki2bnsr8Q0DK0AIehwDGliAKQprTJUCBtQq9QfCJoCVECdQIC+1BB
 
 kRemlkYvVaq+0JK0SNFahs0PV0Xvb47NIthLRjqzCUcC4AWtIQimtklsPFsI45LgCDq2CIvE2yKVCSCJpm8da3BF7zUxXIRP9Q60MeTreHVIBp8YwyoBLiCMDMAMAJgAwA9AKSzkA7QPhgcA1QBQALQaXAsCZcVfvNRJoxBamhnwHsbBSjlX/Goy0IqbbG0TIezNBJl4DKnRntpmmNbADRB/KzqmJ85CpUN41NUrSkOfEKOk1ZPNrpUC17ddS0lt
 
-ZlV02TFTLZLUD1W5XqmC50rbQkrVdVO81kaG1TqWqKuZl+XAmSnjeUvqgkJUl+ew5rpA9tMrVWoTMttpwQCgDRCNJOlkVZE1ANp8SmAyq2AJoAUA2oNSKSAtQEYDEAHHggDtAjIC1q6JcBRtEGykaCMrSsHSIlospikpIyjCd/EJD8o3Phtx7wwJM2i8ISyicDzK3kLArs45OeJ7DIsvBxmkt4pX3nNNfGa01EdotsI2rl4ZqZURdlHRZVKl8xUt
+ZlV02TFTLZLUD1W5XqmC50rbQkrVdVO81kaG1TqWqKuZl+XAmSnjeUvqgkJUl+ew5rpA9tMrcYXWpnBAKANEI0k6WRVkTUA2nxKYDKrYAmgBQDag1IpIC1ARgMQAceCAO0CMgLWrolwFG0QbKRoIytKwdIiWiymKSkjKMJ38QkPyjc+G3HvDAkzaLwhLKJwPMreQsCuzjk54nsMiy8HGaS3ilfec018ZrTUR2i2wjauXhmpleF2UdFlUqXzFS1Y4
 
-WOGSrTkzvNXThy2FhLHS5WP4igsHDrBtFjmjmpYEmdSM4gnWEaHp8hfM35iYnXsyodZjb3GOptmQ/lvVu2o533wHZWBK3wdRSTAedN1CNzvx9djCJdBEdghXg14JchVsu0Nf43BNcNQE0RZ+RRE3plUTRICJANoI0ACM+gHFw3xj5rsJVFBwBTCeEB0Df74N7KGYwNhRjP+CFEFGTxxEgUwgIgLQ8op1yVNbXMkARwllGuBk4tCOp6N13aWS29pB
+ZKtOTO81dOHLYWEsdLlY/iKCwcOsG0WOaOalgSZ1IziCdYRoelVBH5aJ17MqHWY29xjqbZkP5b1btoOd98B2VgSt8HUUkw7nTdQjc78fXYwiXQRHYIV4NeCXIVbLtDX+NwTXDUBNEWfkURN6ZVE0SAiQDaCNAAjPoBxcN8Y+a7CVRQcAUwnhAdA3++DeyhmMDYUYz/ghRBRk8cRIFMICIC0PKKdclTW1zJAEcJZRrgZOLQjEtjdd2lktvaQR1Fto
 
-HUW1hdQ6Z02RdAWJW3JJrLdR29Z9bTtUewaaoVzmpJNcYlZ0ondPCTw6HqV2G1ZXZdVvlUnY9Vm1G2QPHe0BwClSBod8FPFiyBsnsrZUQDBdmlohAZlSswYPutUzqzzZu2vNNrQ1TxANLHhGTBrQBQCVALiF+RJZbDJA02gAvWwwUA+VLbGoN+RY0jPYTnSQg0IvDgB1fmvOIsJsOduY1Ux4HXOOqCRg8G2w4tc1FpCiiOwQ3jkC2ZCw2hJ3eAzl
+XUOmdNEXQFiVtySay3UdvWfW07VHsGmqFc5qSTXGJWdLbaidiojG3+V5QaQmGFi2bK0DtjQfPlSNyrRUAjqiBmcDFE1BAH5ZapCBc0uFF2aWiEBmVKzBg+61TOrPNm7a802tDVPEAw539TH6vZ8ice3cukzPuCtAFAJUAuIX5EllsMkDTaCi9bDBQD5Utsag35FjSM9iOdJCDQi8OAHV+a84iwmw525jVTHgdc46oJGDwbbDi1zUWkKKI7BDeOQL
 
-9430dcEylFHQI0zVEhcy1S1cXWy01tmPRYVoQ/ovEB+WI9cM2bFrHdtWo9sOBQpG6rsJUkXoEfCvX61oRsZkiduudV1d8VecenytFja7ZWN9mai71wGeOIjWwevdGg9EuLsb2ZsOFCdGJaYZaS4RlPjVGUQlUNYE0w103cHmYVHMojVYRyJSjJ4RFzRQCPMrIM7jZ5YLelkUlVMPSky8GZLygAIUVpIEDRqqNsJHMLwJBJmq/7rxjrO4JMs6j6Ow
+ZkLDaEnd4DOX3jfR1wTKUUdAjTNUSFzLVLWxdbLTW2G1dHfj3JdtrX5Yj1wzZsWsd21dPCrKhMKCZDaUrJUkXoEfCvX61oRtrn26uuZV1d8VecenytFja7ZWN9mai71wGeOIjWwxvdGg9EuLhb2ZsOFCdGJaYZaS4RlPjVGUQlUNYE0w1k3cHmYVHMojVYRyJSjJ4RFzRQCPMrIM7jZ5YLelkUlVMPSky8GZLygAIUVpIEDRqqNsJHMLwJBJmq/7
 
-E53Ema4LQ5T93Ne9ET+n0X93BdA+WL6jFNLV3Xlt3TS72O9XWTLVQ9mcf1lMor7md7T1kyCw5IcpDZV3vQYnfhQAaGPYYWLZsrQO2NB8+VI3KtFQI/DaQAfkOgn1c0EIm9ginW0hQ++0MHAFU3wBdk+1rPeIlbtkiarbxAPQCIGolUAEHhx5ufsAhCAmSGwy1ABoI4iMAQFCmBUxxaSHmIl6DS0gJAsbI5Lcpewh7GaqYmOTTZE3ztSrV5OdNCB9
+rxjrO4JMs6j6OwI53Ema4LQ4L93Ne9ET+n0T91BdA+WL6jFNLV3Xlt3TZ71u9XWTLUQ9mcf1lMor7md7T1kyCw5IcpDfM35iyPc64YJ2MQFUY9G9fo3G1OPWtkB9v2gfXoAj8NpAB+Q6CfVzQQib2AKdbSFD77QwcAVTfAF2T7Us94iVu2SJqtvEA9A9rbz0RFzHhmWvIQeHHm5+wCEICZIbDLUAGgjiIwBAUKYFTHFpIeYiXoNLSAkCxsjktyl7
 
-S1XNYnQgFAvMpcVGqOpC84HwPXa5tOhtxlYFBbdw2hdBlZf2O9xlUmFCNLVn02zF8XVZWwhkjQeW+90vel35Jm1cH0fO4fM3hX8MbcrUNYkfe/3yEsdOzAcWAVUZlXFifTcXVdZDm/0Qe6fU8WWNAFdn1v2vhOINw4ZwFIPCVughsAZ48g+s4SG9dl43JOuyQFn19KFY31TdEBQmWQlSZW33hNaZXhWydwOiC17AOEKkhMgjDHo5D9eNXL0sRFOF
+CHsZqpiY5NNkTfO1KtXk500IH1LVc1idCAUC8ylxUao6kLzgfA9drm06G3GVgUFt3DSF0GV9/W73GVSYUI0tWfTbMVxdVlbCGSNB5f6JutcjSNYb5Muco1X8qPXvmuw5qZ5IORuhbo1a5/bUAPvQlXWQ4/9EHrn1PFljQBWF9b9r4RKDcOCT1p0wlboIbAGeFoPrOEhvXZeNyTrskBZrfShXt9E3RAUJlkJUmU994TWmV4VMncDogtewDhCpITII
 
-YwGYexVzVSerbSslDEA2oNwgS38c+ZvYD8NdYEyFdXKx59XndIx9CRgn50ktR/bwWUpp/YuVxhKqaW2tZpHay239/Dff3wJacXZ4Vd21VvBT1XHUggH5pwGmgyE1qX/1uNcKs+U0JmPdrlytvjts0E9kAxIA/gc5NqB9Cqbul6yhM0KOSjqHkPLQ314ljwCyWhHlOoyhU8Ru24D7Pdu22tGOnhHsA7QIQARcN4I0AwA6VNRDNAzgNUCVAtWHA4cA
+wx6OE/XjXK9LERThWMBmHsVc1Unq20rJQxANqDcIEt/HPmb2A/DXWBMhXVysJfZ53SMfQoiBFWn3bOWX9fBRS2FtUpf93GuZbSOkg95lQr4DNd7ivkjNc1FXzjNbKEggH5pwGmgyEInVH0kgmwHCrPlNCf71p9sAwq3wDzvIgMQAP4HOTagfQqm7pesoTNCjko6h5Dy0N9eJY8AsloR5TqMoVPEbtpA2z3bttrerbR+lXo60gZH2X830DYdGwDtA
 
-TOT0aci+iXaqN8mbBmSM4Fvcd0Qh0sMLDuo73d840FPHFhTKCZaGsmrp43qPpawWFK/i8Y4Fd2gqDc5aI6UthHdoPEdMXU71Rd3ORUBRBq/uD0aRypYl3vGyXT70EDqWceWr5mXapnVy6wdPBZEVYU43uDYYXlTzQpXQn0liKPVmTOwSxqANrZHuuEPulkQ70nsjL+Ang5qQWukJ8jYmFMn4yhcD8AZDowR7m20IBUE0N9OQ/cwwluSqE0t9JYoK
+hABFw3gjQDADpU1EM0DOA1QJUC1YcDhwBM5PRpyL6Jdqo3yZsGZIzi29h3RCHSwwsO6ivd3zjQU8cWFMoJloayaunjeo+lrBYUr+LxjgV3aPoNzlojpS2EdZg8R3Rd7vZF3c5hPdEEPGRw2mEODTqXuWKt9HUH0c9qWceWr5GXapnVy6wdPBZEVYU42/9zqnlTzQJXZ8NhDS2pV3OwSxl8N59zQe6UJDvSaKMv4CeDmpBa6QjKNiYUyfjKFwPwPk
 
-blDEdafG6O6YNUB7A1FWFwuIbAfkgUpmALUBbAoRbDkmBbA5xgIdFwiNygkB9Nk3DomMB8Vbgn8HtAehtpg9GsCJNfKICoXnmm3ISTLIMgWQ2sDCrEt33bOV4do1csPjVko+F2GDeg7Xjxi2wxIAKjMQeZWiNJg+y1mDSXfR0pdtrWvHWDGccgmP47qIXBKDvhpM0mllWCw4aKAHiQmn55Xc7w2jZjhcSgquPYO0tm/5S6OP5Ofd0kRo+sGQ611Q
+OjBHubbQgFQTW33FD9zDCW5KoTV30ligpnUMR1p8bo7pg1QHsDUVYXC4hsB+SBSmYAtQFsChFsOSYGCDnGAh0XCI3KCQH02TcOiYwHxVuCfwe0B6G2mD0awIk18ogKheeabchJMsgyBZDawMKh90zlw1YMV+Bv3TsPqjYXTYOWDtePGLP9uo6v6g9GkcqUJd7xkl1oQLg2vFpdj7mx3uohcLoO+GkzSaWVYLDhooAeJCaflld5+cANR9LSdcT+js
 
-BGCGbJvSZdZH2/nkMr3UwaWvL2omsLfBRoB9GQLOEree/G/ELmSTgxG2cJ7KLCZsEMr9IxLkBOey9QrhS8YXREASyIZMCaZTZz1rYSRKQE7GCZ4VXI1h06g3A0LPm1JudrUIJNdROAkFdJcRdooEjsH8VX+ccxKuVqp8C46uE1xNxAk2t8WVprMDG1SwyQDbLDKJAvTw++YRA7KbgirCMa32NsrIj8jZHBmSNEho2ERmq1quNjGJfzlLCQcUOPrI
+Q/n3xDj+UX3dJEaPrBkOtdUARghmyb0mXWR9v55DK91MGlry9qJrC3wUaAfRkCzhK3nvxvxC5kk4MRtnCeyiwmbBDK/SMS4wTnsvUK4UvGF0RAEsiGTAmmU2c9a2EkSjBOxgmeFVyNYdOoNwNCz5tSbna1CCTWsTgJBXSXEXaKBI7B/FV/nHMSrlaqfAuOuRMiTcQJNrfFlaazAxtUsMkA2ywyiQL08PvmEQOym4IqwjGt9jbKyIso2RwZkjRA6N
 
-BjlCMZO6MsCIIRU1hlCUDgUf6jrATlxiIWhhECk9zhNE24OPCfCTMC/jvdfnhPAjIPk38VdsffnwgqNUwCTqyGVhFzBxDQrGEQYTwpBoqtocEmCJPAr+FJZSQQvP8lDhfeq+htscnhoQLJOU0yUKCAyT4LiTQFc7CQgf2F8CnASCh6HbM88g7JiCCEZyTUIiEebniQWFGQJNSfwJWnUEkQvPKedgkFZA/CyMWsTFTOXK0i8R1GnuhLJk0+KyzOZd
+hEZqtarjYxiX85SwkHFDj6ycY5Qi2TujLAiCEVNYZQlA4FH+o6wE5cYiFoYRFpPc4TRNuDjwnwkzAv4r3X54TwIyGFN/FXbH358IKjVMAk6shlYRcwJPUKxhERE8KQaKraHBJgiTwK/hSWUkELz/JQ4X3qvobbHJ4aECyWVNMlCggMk+Cik0BXOwkIH9hfApwEgoeh2zPPIOyYgghGck1CIhHm54kFhRkCTUn8CVp1BJELzyHnYJBWQPwsjFrEtU
 
-jMi7wYRFhThWFxLJC3CK8ekKyQycH542wssC+YfAu087HETfqNLxxDYIskAX+R2N1MvmHAjRP8jpAgDxfF80BNOnTL0wpXNYI4B9NcTJdg2O6YrsGThQzFJgkDXEMyFTVSDoMw1P0+aChNobU0Vn8EIwvUnsyKVHSJcS7AaUzxFkm0yKqhlmsM0wj7M5/udQNckU8Ny3CnXe0hxTrkxngLJNhHjDTwuXPZPP8PXvi0/wl/tjMl2z+MYoAaU2fZMz
+zlytIvEdRp7oSyctPisszmXYzIu8GERYU4VhcSyQtwivHpCskMnB+eNsLLAvmHwOdPOxtE36jS8JPWCLJAF/kdijTL5hwJsTso6QIA8XxfNBLT9039MKVzWCOBAzIkyXZ9jumK7Bk4KMxSYJA1xDMhU1qg/DNdT9PmgoTaG1NFZ/BCML1J7MilR0iXEuwAVM8RZJtMiqoZZujNMI+zOf7nUDXMlPDctwu13tIGU/5MZ4CyTYR4w08LlyeTz/D174
 
-oqNIYyXEQxGCJCz7MMOCizssPZMgmVpoQjQzYFtnBIg0EvLMUwO/WpMWmvgv4RWmnHYLPazhRLrNizxU3rKtwT3iw4OwnwhnhSsDfmdR706kPrObg/o+f4EgPhkEp59y9Ggiy0SmB3BhEcQLv2VcHaI2Ptwss6KLKSigjBNxgwc8VMMjSeOPBQ4TUng3Yz5Ni6hLK42t/CcTQFZBxfFEcFIQjIHfonC7MDta3DPJ58P1NP5vMI7MUccbM/jCw3bH
+tP8Jf6kzJds/jGKAGlNmeTM6KjSGMlxEMRgiMs+zDDg8s7LCeTIJlaaEIqM2BbZwSINBKazFMEf0GTFpr4L+EVppx3Szps4UTmzCs7VN6yrcE94sODsJ8IZ4UrA35nUe9OpCWzm4LGPn+BID4ZBKJfcvRoIstEpgdwYRHEDH9lXB2j9j7cOrOiiykooJoTcYLHO1TfI0njjwUOE1J4NpM+TYuoSyuNrfwwk0BWQcXxRHBSEIyB36JwuzA7Wtwzye
 
-7q+w8uIoIuwzGvnN5CGwLiAdSyku0yo0RxdnAyGlwtvBnU+MmilDhzSMBKddBCBFacRbc87FBw/PBf401CEwULIK46gnOv5ugpMqq8rqNuh6QAApvPx4dxB2M6IzkiU1GynJEbIdIyM73Oedf4GzCMol2GhN+6cQLAjlhlaHhyATgJLApuwD1AXlNYd6NfOiicE4PrvcA4JvNALMAjhQCYnxDszQRBcBTh+yuaF5KfjvMBCDNEjaV8DfFz1s5IoL
+fCTTT+bzDezFHHGzP4wsN2x+6vsPLiKCLsMxqVzeQhsC4gHUspLtMqNEcXZwMhpcLbwZ1PjJopQ4c0jAS7XQQgRWnEQPPOxQcPzwX+NNVhMFCyCuOpZzr+boKTKqvK6jboekAALHz8eHcRjjOiM5IlNRspyRGyHSLjPjzHnX+BswjKJdgETfunECwI5YZWh4c0E4CSwKbsA9QF5TWHeivzoohhOD673AODHzMCzAI4UAmJ8Q7M0EQXAU4fsrmheS
 
-WMDhQM+vwM4QQg0hJYJTuv+eZBELYmLv0zQhsntQZoA0+grN4B2DLzqMJhPQtHAD6HnCxg0FLXNYLguLlPYKVfIgjXRWMcgvOxSQrQjDgg41jL9z/qJbBDo4/PvO9jci+rQ++CIEosuogpUIKlzsPeXOaL+sgOMv8Si9PzDI0KlYwaMGi7ItmLCixYtDhJTRnQbw6HgoPqNfuqYv9jTi7otDdORj0F5GfQYUb+2xRsMEjdtfaH6XWVi+4uai6zl4
+wE7zAQgzRI2lfA3xc9bOSeC1jA4UDPr8DOEEINISWCU7r/nmQNC2JjH9M0IbJ7UGaFNPoKzeAdgy86jCYScLRwA+h5wsYNBTtzJC4LjlT2ClXyII10VjG4LzsUkK0Iw4PONYyk8/6iWwQ6OPyXz04xovq0PvgiA6LLqIKVCC9c9D2Nzxi/rJzjL/DovT8wyNCpWMGjEYvqLDi1otOLQ4SU0Z0G8Oh7aD6jX7r2Ls4z4vmLA3TkY9BeRn0GFG/tsU
 
-syL8Eo4s6LPfFskZlFQJgA3gqbvQCyql2EYCVAUdTaCMMNoEYBbABoDDnVlJY7Xp16xVB3oeh/5tP3iDxdOJiLzlCK4E0NbdsobDZ/nQsM6VY4xS2FtUpYD3jFG3vJjWseFouMPGy42mGmDTqXuWKtm4xqPvN5rbW2PuuZgoK2pzNVx13lUJsPwzQCIPGIrNgVWfk/M94y0nYCDowq1OjmfREMfjUQ54Gf2nQd/YIkv9hri4mSMLWJwigDv0FhLY
+bDBQ3c310DC3fbg3gqbvQCyql2EYCVAUdTaCMMNoEYBbABoFz2J1ghoXbNj00HXrFUHeh6H/mi/UoPF04mNvOUIrgTQ1t2yhsNl+dF/WEn4d1/YuVxhKqRPmkdNIGExCNUQfuMGjh4/F1StTg3ZXvN5rbW1Xj21QoK2pzNVx13lUJsPwzQCIPGIrNgVWfmNJFXd+PiTjpStlSd/44GPtmwY9WJdLsmhzYLhv9hri4mSMLWJwigDv0EJLYbnFEFD/
 
-bnFGZD8SpLCPL79s8s3aqJQnaED4XKwz5l6wBFysBpftSSY24ubDkV+n7bSl8pZ3dZCJtIsGjkxg2IEBId691OWgxokEsoyWCJ8E2MUIhve9IUECeNG2P6Hep2nDjw1YMV+B/3cMuTjMjtONjLWw+GqRB0QdMsstyowl1St5g3ZXvNmsdqNKKTlXYOlhkyCUIgm2MLRYazqjaNnfwZMybPYxPgzePY9zQaSEVAIwJwHa0rQORAw6FJDaAjA6SJID
+mXhEJ2lA+FysM+ZesARcrAaX7UkmNuLmw5Ffp+20pfKSd3WQibSLBo5MYNiBASHevdTloMaJBLKMlgifADjFCGb3vSFBAnjRtj+h3qdpaw0uPKjzvQOnmD/DVuM4d1ypEF6jCpT73g9x48mbDtS6oKBuDfxraOP4JQiCbYwtFkbOqNo2d/AMzds+APo9745dUATpIRUAjAnAdrStA5EDDoUkNoCMDpIkgOsBsAjzPECkAoLQSE8xRIdQFiBGfVH0
 
-rAbAI8zxApAKC0EhPMUSHUBYgUn2o9PCOTRXLMncmPA6Rq5oAmrZq3AAWrVq84A2rdqw6tOridVhnkjsCgSAczvxH9izOAHSsnZZJgjxO01AirRM10RCLDh70T3ejndV9KEwtuwm/JzYzlrK73lq8X9YMuaD5/cW1Tj9VjOMiZdxoKsKl7vZD2qjyZsO1Lq85QH0ZdMa2eXbFFwm2yOStFuzDmpKtPwgPUlo/20/9S2goKckl2NfkrZ0nWEO3L74
+8I5NH+MFjJ7cDqqrmgOquarcANqu6rzgPquGrxq6avlLlAfp1T9dZQSBCzvxH9izOAHSsnZZJgmJO01AiuxM10RCLDh70D3ejndV9KDwtuwm/JzaLj/nQaJq8X9VsMmDt/cW0bj9VluMiZdxuysTpEmey2ODiXWaNnjFA2IxnD4fZl0qoFwm2yOStFk7IJ9tBI3ZgDaPc2GHLH48cvQ8PGE/Hp09q2G71dr1YoQdzguDAyIc5OMmv2EdsDSWTzEm
 
-810DTMDIhzk4+a/YR2wNJf3MSYexOWvBjy4b41RjWSnkMnlHWjVHZA24f0BQrkgDCtLk8K/cCIrjSpFh/h3UeshNwfWvdRDzIyfCl9RkyOikoRsJXGNYV83WUMo1GSxICk+xAP0A9AmABFwo2RgBFx+4ygEaCwAiQBSQOVZJbL3VQEIJoTJT1kHKSJLijJVhb9KiMzDzCeROMqXKxvYWgRCjcDPC0K3Y7fpyiB9FYwrKrCCKPbKHDeoMs5VLVyuj
+HsTZriY8uG+NGY1kqlDJ5R1o1R2QNuH9AQK5IAgrS5OCv3AkK40qRYf4d1HrITcH1r3UM8yMnwpfUZMjopKEbCU5jWFbN21DKNQSPoApPsQD9APQJgARcKNkYARcfuMoBGgsAIkAUkDlWSVK91UBCCaEuU9ZBykISzcCVYB/SojMw8wnkTjKlyhb2FoEQo3AzwtCpOO36cogfRWMKyqwhKj2yhw1GDLOVS3rjMjpuMbeZHbuMSAkyzEHTLC1UeNz
 
-LPdfoPRdUyx2srjHvXe5e9va773agcjSNYb5Mua1VAIEsUaWnjWCbyhvxVfN4PlBvg6cuGN0PGJ0XEwqXV1mFYbo12vVihHXPxTLGyUKSisdOXajJGeMnRKrL/M2LEu4ZZEtgl/udevvMk3b42FDDfXN2FVOFQSnwbS3egDKA1QNSIu4zQJID4A1QMRVMgKWR+CjAHAC7gkjupmiuPmdOnDPRiI0cSY1jDtSqTFERCENL112dHG3zUGigQjiILMH
+LDa4H1Nr7zdqACrxYeeWP4X1UAgSxRpQ+NYJvKG/FV8HFhAMKrBjcFUnLqvPyhN5jiqbVXLbpTctATiQ+qQKsD6BuB1p30HJIkwOjMnSirL/M2LEu4Zcktgl/uQevvM43b40VDbfTN2FVOFQSkgbaS4mDVA1Ii7jNAkgPgDVAxFUyApZH4KMAcALuEyO6mcK4+Z06GM9GIjRxJl2MO1KpMUREIQ0vXXZ0cbfNQaKBCOIgswcHTXgIdB2tpModM4K
 
-B014CHQdqKTKHTOCuq5CrHD0CTei1jaV4pfh3jjYm7w1NrVxpJtj5cowuPtrE6RJlrj8y7R3e9LvAQNvZu49qVDrW1fYNk2LCFJi8lXHUNsaNJnEWiCYOCvcNAeTw9cOo9gaAWg+r6ZeABPQpKHABwARoM4h3r0wKiCZAFQEQBKkywAwCEACAL32ibMGjGng7KmwDu5RALLVHHg+gEaC81o4+yvahIgJ8gpgcO48yg7APVwoQA0O2jtw75EFKO3K
+6rkKscPQJN6LWNpXil/S0WstNJa7sNGV/GyZU6jQm9WsHjYm7Mu9tJ442su8FA29mXjSmf6tbVHzgQ0H8VkC650a3Wxo0mcRaIJg4Kbw0B6ejIIWWyidgaAWjTrA/aiWJAkgPhjUQbDIwySA+gMcAUA+AEyDHAuSPgDYAtQK0D4YmsbDksjfTjyyDOqYvBI8L8LYCq9SRdNQjkwnBBd0TIfSPXx+oKwSHoCotqqIa3CVFFVxKuvnSS29LOlaNUDL
 
-uO6juw7dlrys6pJOzDuPrcOwjtCKy/oqOFAVO/jsZAlQPNU7gzO2TvoOi1SjvU7UAOjsZA5EJwBQA5EK1B6gokCXSc7NO4LvC7BoIQBGAKihzt47XOxFxYAbMn9tsokzNbF+qUu/zu07GKfGO6ouuwLv6AN4MUM3y7ff/Wk70u/U7ri8KyxXDQIoMbsE7uKGztegmNJaAu0+oC27jSwSuPyHTQiKrTf4nu4yD6gqXOxDTIzsRPzwCGyfhwQARgGw
+41TxvjFI24y2CbJHd72iN9g3WvGjtHRYXSbtrfmGh96XStsR9a2+yg8IKAmpv1MISS6NjwMvGoMejoQ6dtfjL1v4qHb0Q745mbuJkGOWbME0jvErL0/Tro7FcJjsfQKQp5Jp0u64hUjdkNSUO+bY4pAX/r03SE1gs+Y+Fv1DCSDACwZtQEVLtAcpkICYAAAaki1AHrdbBY1mOhlmyinkodq9mOkB7Gvo9qrlMcsahGB0VbYKKqo8Y2LrjBfY8yjy
 
-AGAn20ZQEAPiDSD9zwacSTO7rO3IUVATyE7tSgJAHLsK7q0ADuF7/AceBWWku+XuZIbAL1Bm7mbsECf6tWiQDD4cSI8wcgCSKQDKAYoAAAUo09QCUlzKEPuD71rAACUFoJUAIAygE4iWY3e33sRag+4vsLKtILOMT7We8rvZAdOyyDutUOpwCHDiy1PsVgpAM+EoVje6Kjh28fgsDhLzoBwAi0N+9FhCAUAJyIgOebNNSkALIKQA9A9+6/sAg7+5
+wmE0yCVuFoqw7msE7vW0Tv9bwXYNuk7w2z3XjShwyy0zLRo/72M782+80GxVo0opOVHO6WHcdyeMuhbbQ2u6MC7s0O4Lab8q5cVHLhjeOs3oJhA44Re29bV3xus6wX0K7kgtHvTD0vP7C/VZSlxDZETeJqKp7uu8N0+bo3YetG740ebuVDgqjvt1sG5kKZbm/zWU7VA9AC4g8AGSPFT4ARfjeD9AxwKyAUAN4BFwZAtLKxXsVdFPonnAeqsQWvds
 
-/sN7mgE3vFGWe3YAjAYPjkAGgd+3AC179e3ftAHq1qShsVhAIwARcie0Iw6jLA1XLBAyBytDO0Z5FAAGA9u22AvD5hYyDw76QLgdCmJRvSCMMyB6gfoHkDuABPkI7U2AdgIAB2BAAA==
+znssexHaoKSkmstKYsAW68KwjQVtCBNoxaZC0YzgSFDmZxcFXoLApqDiwlDgBwILj1sq8fW/Vmqjf3Xnu9NW479KU7mo1Pa1rfvZj2mjUmxXu2tfq0M1s7/A+3MKb1NHlYYILPpssa5/zoUF0octIzyKUBy0Zmi7NpTcWJtRshFpucw+2YVW7hY8DpXguUd7g2gCvSts4FfrRC28AeMO5oFoQys3jwgaK5Mi2EISuJ56MWiK1totDBCzWDVNK3mt
+
+IW5LXgfbDPDbP5hdw6aPksrEQS/3zV1bacNyFhqUMMCdi6WFGSrARimhLuGyyIcnLy1FwT+HwQwbVUHpXYqtb1phY8XmFw7X8NQ+SVDm5QMrGmLL86qtI5ExpeyoPoZUVyIR6u+n6cz3axqIzuTs9a1Sg2rs+7TQNh1kRbIcJIQgLUBkiBoPhjMAt2R0NqH6DaMRItF8CNxwzAwwRsxguU7iBvYH0HKQbItpuu5quVh+nu81Gw5SnE73G7w3OHgP
+
+WLXA91g9LaeHb/dXtctL6pXm0Wzo7ttmUysGyzxiSPRsh7CO2yn1huHw8Ic59MuykcbZA8QkhUIXtUXlfwF9YkDQMeh9PHYQW7FrQbg45LyG8hguq/WBFv6Qx22tGaWEV/1EAAA2fZ1u0eJxFcqqkhNDDXqyDUQBoGwDVAbAPuBQMrIABmA7H4jaH2BVXduBWqZAkHvs8HZUwjpwRXKf0KDG3EXADRmwOrTz1OmXyVvzd829hS8NJcOBsbfS1nv2
+
+Hxa4EF39Go3xsF7243hbCb+o8XtTbpe3Efl7fK2Ses7+SZtV17m+empHRQWrYtcdEkpUmORdAvstvj3e6Ou97QzGIcSIcIF2EXLj1QGPmbIExPsWSPRJyfxogkU7A9C9cPye1BQp9AbELWyQya/LSY/usb7fm0etRlgWyUNxnW4ofsOrAvTaCEnjDMl4UYG3bTwH9wztjC19wIYMMGHfeuZTHU7OlIhU6/KTIS+jZHMyxHBR1CJVDo1Gqqiin33Z
+
+sMSnA21KelrAPfsOuHRe9Ttg9i1VqcZxyCaKjSEyfdwcwKsfY+M/S3zrBSI91q8tSM4Zxw8cGFUA0YWX20u7IFm17xwT0SAhgjYUrDvwAgaeFili6uCg8Ati5wgYgGPBMQFzaIkkDguNVTiQbzba0KZ3PdiOHtuI8614RmgDhCdGdBpUD3AMAJ634A9APhjOA+GPoApgNoNRAwrivSFv9HYrA6HCzdJQDxZ14x5blMIDhNQhGnbJ3aIKsyFL+Ckm
+
+Y8Kq6rGt8NfCEUBVlbB471hxnv5rBEvSvSnZa1cZynbh6JnkHBxxJuzbNB3yvPZ1e22tCrHa8DW0cBQbvRbLe2+LE+uAh5aeb1n4+EMbIekHkRrQknc6ey7fkRZuNd5uV8L2nRF984kXqsOReWQ4ke0iWQJzN/aN9Xm4UMQFRu1CWxn++/GcI1NQ/317ioGxAAcArIJUCSAQeO067t2BeC2IX5NnBJdELSeTlB7vUhsg10WiiMRxrlynv2VZyB/0
+
+W0rKx4xddnew61mjLFO+Gpe9MXccNiN3h3Z7yFuZrIY8di6cdq/9DXF5C7UilDceCYuOjGJHbr3mudY9wnTV3SHjqeXt/DlMCOqg+8VDrAIGXMI1T8o1sEOouMBOEAhig45NrTTxAO/4WVHftWQOPZFA3Bf1HPPeEVNHqS2icSAuUY8wRcqSK0CYAxwLtfPMjQBFzUQ8QHAAwAewBQBvnKh2g1R0bmmSaxs9fELxV27EOyQDaUrOjjgVwoxMi+nl
+
+hMUG9KVXKBrYUcsLyiAcdYdStLHuHWKcrjax2qMbHvG+Wvk7L6n2c5Xho3Ttl7vKy4MNjQ54VfbVMDGjjgmU53y0T8lSXWkE4CeCLs97EzEj3nExWVZStXyRzOv35c604Rzyf16vw4NKtEDeI4RKzMQJ4QrO8mr7KS/rugFATVvsYpuY2bthNQG85fpSJ+1/4GgHAO7g+0lGIwzOAzQEIBa3KRfoDnZUAAIHwXga+oeAQfUodq4NTBQumHd9Uv6j
+
+14z/FgI8plGUCqFEDeESCc18x6sY0E0EjsEjg0pPsGQ3iVzYcSlq444fLlIy0D1zUqN7YNUdg5zNs8rO5+aNrVfA8svDn2xZeVREFh5svjnI2WoVhhEmPVcxHqfVcU03GfXTfrMDN5ufWZPkSzfj7mlwuskwrbA6jF0B9JxCeajm2rCe3GdCabTZft8LcpOksM4CwKFjo5G8iUw3r2C4PCLiDrTZeKilb8CJMfIG7Y3TGfp6CZ4evBbRtxgDAb12
+
+wrfimTQ84CGrF4v0DkQmSEHi/sx9/QApZQeItv8DepiIZa9DhFRuw4pBf0oGYbptXTzQ/6sNllZ902ZzLKfKKvwkrBh9azVowsxHD6QCVzzXQ3hO7DfZ7N/Z2dDbRB8jckHWVx4ey6JexjdqnWNxQNVlS29qXs77a3NQ0KQyqJcGcuF9wdQq4yVM5U31p8XeiHpd2TqSHSR7+VqXXSU2y13ci5pPJAbcs4FszEVrJoZIM00ggdqhxCObZzWl9/fR
+
+zJcBBy5oE6K2PAPNctjCMLUSx9aglVlymN+Np8hLd/r2Y9LdS3OKpbtb3rl2wz7gNoEyBcgPtOgXo1OEM0DVKewD7QaAEXGvbGBQhqYFFVg3EQLMCxiNymCih3eJDBKO3fWG+KnkmYf69oTIaQwdfs+8mE4QQ/RuhPMc+IgRPtwnmg0XUNz3l4d4p63X4Ha4wjdk7cp0g9jp2V1HecrMd/WvcXzgxQNHluN74cNYkmPXw7zE5+HzNtPB5SWLUxCJ
+
+N4NX9SUXclitN5qJl3DD6ZtV3/5fLtsPiQ2BqwkthFMSRPST17ZxP4z5syJPFME8u5G1ip8vxLf9okuDdYNSkuSwngR0FaQZiHhFqAEXGrLfhFJIQDOAh4ORBK36bvuBnkmI9WVNjKqsVUm9QOIs6yrijKVxVbEiHIaV8/OyE/qGMz98VzP3aBTDA3YT/E8TP8z9E8N1KT2w18guBxk8OHpg9k/57DLSje7HKYag8qn6D01fUHZT+81oblT/LUqo
+
+sOPNMgvi6d8DmpWHW7CkPQ62vUjrCR87zdPVjPQ9Xbo+9XeATwz70mjP4TxC/AvUL+/YAvCT3y9mX3knCLPLViLEuqaXy2s8gOJRio/xK2z/cvEwjy+Zfb3blz7QRcQeBe0cA7QJgD4YNz8wDksXBjjz2A3u64+SMIaNbBpCPGJVVrABMBbLhWzFhQ7kbiO+YyZ1Wi5YImCAD0UV7YJ8JQrG2rJ9C8B3dF3C/pPxgx2dLlsSVTvbHEd+i9qRmLxQ
+
+d3umN/HdM7DVH8BybhSQo2P4bcOh5cEk9d49BHSMW6ghC0lzptWnDLz8xMv9N309bNAz3ENDP86+w/5Cug/2MevRqqtOyIh0ebOVpWZPr6yLoZ3vLyvtzFuS6MIHCBxkC+aJrDEwvUggjp0U2Rps2BFMvPdi3u+5o9Zjn2jo9QFeY3noyHjq2SEp2SVJkhbAMAC7gjAxAJICJAh97gCMMtQC7jYAFTyodA7G0cDjoKjKFJZKI52nyRXdpJkgiVpw
+
+RD9cBYwJMXkUIyO1arevqBxFOwWLd/szJPwb8scw385XDcEHyLwg+5PkdxxfwJNnsm+njtB2m+FrDB9qc2jWbyqhoKv4PdST15W9r48oFNxnRRDK5y5HU3XTyXc9PLL4zdMPdbwBMNvbN1NP1pzWGowcIx0xKsWEEN4kQz7JcF5AfYOsOMKU1HeiXCyI0C3VurKqOCrQivN2hZebPfd7DDWsvEJ9PhCLLGB02SFBBY4DSI3P54ivADnOYrv6Y1Gf
+
+G7K99Gd2ff2qlLJnF7McA4QmSGwBiyx5mSw2g9wBQDVAhADgBQAv/j0fVlT70VVtSdfuejaQ5nexCeE0EkaoEU75jFd2i4FJpsLk86VPVzDbXK8C5b1aBtvd84D+f3wfDvb3jTcwd0i9OHiNyxeoveT0IqRmoQI6yTbib0r7Yfc20uozgGb2eVPuLwywj+ok9SVfnHikvPXyiNL4Ie6bELjQ8VddD+8msvG2uy9cf7y3XdqwwyMCTb98yBl+OEMK
+
+rl9D84cAV+93qj5mPqPL2gvers671npVD2j3o87vBjxFtNA1140CEAmgLSMFSUAIYEYFQeIjY9A+du15hf6h19XJwvivhK7WSdHymBoQvJ2j9jXwD1LKM9oRHCzQirFKNkXUgjYwmmOXgVYtnFyBxspX8DwU/EH6H/NXNfbwa188X/ouCCdfq2/Xu00V/Muf1P6LcrlNPt3rGy9TVDxW+jiVb70+zfCRvN8aXjb1Zsw/QkCkKemczXoSuhE2r/kO
+
+wueC8D7f/mdZc2ftl8vf2Xi9w5/6PLlxFsv7KshgURcIfSof+XUdAtByiUydzBKuzobF9mM1NbIZcJwbXiuKY8hIK0Tw6RLz7CeKapQuq0nmvsVBvED6k+8FqxzA+DLP0a72qpPZxleTpfdWHdo3jLVyuEv5w+mR9Ck9eXWFvpus/wlwDVeEfjr03+Xf0fFcTi/xHem3K2vHfcakcA+EgKpajxLqwGklUDp1OqmtwDEKDXI+TV74Qj/qZm7X1KI/
+
+Ndoj5Ay4bpwIgaiUUkhPPEAwAl199+9H2W7g0FCNGm9iLI2TRxDMOfvBOpdEMgpBIZ4bi8bbdiDo4j+V12wGGFKYzcEhwk1GP1ZhC+CL5KeRvwy+gAuHwf2xdzVmL14dK+Zw0ccuoGf7T+eEcPcYr8YHB6n+2n6f53vDrkA2s2yX1iipdB2nHwOrkX8kBl5AhEm0h3LMEkoGOdlPCpJILmhc1WgEW45yM7AMvHO0QvoqE5rla12/otdO/tVIfzsI
+
+AuAjaAV/Fmcq/LY1UaDwhZDJ2g+SDlYqCNvMr9A6MAPgARlJowDK0Dt1o2rz5mkO4sWioEQS3Pv9bDlf1ffiTsUPg/0DhnG8OVrldadjW07/pD025o090cjS8qPgZQZkKVgxduEMv/iV0njj3tlslIcmbu1dC/nB4EkI0A12glRMPH2pJLCSBMqJlQofOgwaCE4UkASIlrYlzAhEvxJoTi81qjuiM03u7w8IjaArrvuB+gDhB8AJqcdfpP11DgYR
+
+7UIsh06LGg25K1I69LTgLIJ50K+C695MLMlP3HjoRKvr5OAdwJJMB2g9YM3h+AYf9w3jns4HoQdRAb2dxAVW1OLjg8qnm2xMvqo1FJM3tpzpMgEiPGhDoCJ0NAe09Vzn/9oBtj02Ppcs3jjh8/hv8cgRugxJ1Ka0p1FnhS/vmgc3AgwNaHGBi3Ij5rejcgZrpgDv0tgCPAR38A2EiBu/mq89gP0BqgKyAjALKEqBr60R/naoe3okRTqlOVuWBZML
+
+GABpVlCXk0WpIx9ckCoQTPr53bpXUHZGNguToMR5IP7dPfrC9CgVxt4bpV80rqLUtRjscoujYNX+ph9ZCgVcqnvkQzqtpkpykoDy0k7cXru0CWPhyxNAXEcTtkPtGHv0CC/im8R2hAZMPLoYcjj2BxQAl4RkKOQLsJOpGgF74yiD2BC3IgYtWq391gTVQajlbQRwDsDXLj0BqgHAAbwMwB8ACUtaWMeBMAMLZGkNpBoIg6N1avOk6nu88RMK6Ft0
+
+gcJY4DT9I9vJhAykbI75q104rmoZ/dBQhcvI6p+bvwCsfnpUKvqHdo3hCDY3lCC9jgm8qgSU847jh92voK4o/kcdZQdrA77IukYVOalrVL28M7pn8hDox8wWOz8ydJZkCQapdQjOKCa8BABAAOBKgAH6/WsCUAF/YSgioAJgmKCcAfW6EAIwAqKM1SPwayC/5A2RvPf8LZAciCtQPUCiQeMTRgxhhEAZQBsoSZjWxYWzjgKHTuAGsHogesFQAV2j
+
+O0TMFkQQMCkAGg5cgdEDlgAgApgmMHpguyBCATsGVAcIDZgtsDh2HmgIACki0Nf/KolfQB/bHoBwAD3D4fbArRgx572BbBSHEForhCcDgLubdCFodroHYJgEGcJmBmlMvC9oNzp2CcEiPzdmq8ofgGO9Mr5IfLJ6gglF6NWQvYVApr4Og+nbzLZwxbAof5ugyHq/EGBixwGHrDZVEH0aOyRuSFn65/TEHMvbEF9AyMFhuXcESAQABOSomC/QMmCs
+
+ADGDcIRmDsgAaBZwTAorZoYwisBbBZiLmBMwWWCQkAixpoMxhCIW2C6wRUBggNqAmwUwAWwQQA2IR2CuwR24ewfSx+wb9pBwf4ARwYRCKgMRCJwVOCZwTmD1nguClwZVkbqHhF8MHwFKgFsBMHF0dMAGwxJABQBmgJRBwkB99XQY+8KTsXZ88nrB3uNPxfiKngdgohwC4AsldbKu40WtUx+YP54u2FNIWNMDdz4BJgY6IdB5YDms4PpA9M9tA92z
+
+sUCT/uzkw/taC/wbaCMXuJlAIcT88XlsDi5O/0Rzppwq0LGhCYJPUatHBCGeJVwIEBacy3v/82fsx8RiKBJzlroD2PszdBnjz9uPkt83IXDNpWLRxT0EtMbwRsl/IQ6FPNNL8ZzLL8TvtGc13ibtLvkFtFfnMwkzru8BekIAO4AQEe1DFVqnIGBDwHKobwJgBiAA+9r7r990GhdhkgA/Ba7E1JBUnZCOTvIglJDpx+WMkCxlkpIy+k3xWYGKsWan
+
+TYY4P4QSQOGtytj0tivqFDEPkID1jt+DUPjV98fvaDYQTR1gIWmk03jjVDjhBD9ulO5fsL856fqNlVpmnBlBEhCJvkx9aHlJhsggqDAAbj1nqpx86oYt8m3nzALoV8UHCNdDxzg9Y7oVWgHoa6gt4D1Dkxod8bLv5s7LlN1d9sr9rvqr9NrkgNKgD7Q2AEHh6AIlUXEBQBmDBeZoGpUBsQIQBvjD99zIRtEuiJPNzOOswhkCb8NDk8Ay+k/gduvA
+
+hIJGYxyVJwRtqG08svgfYNEJ0Q7hu/FjVGf0ZUiG93wUzkigbA9IoQH9ooXj9/waJtCflh8MHsSD2vt8o0od18eFmX1eSsadLbgn82wBVddqE/cC7h09gwTipunlZBCYJVCIwUACn7PW9sYdagc8FMpQ1prC+HunhdYQng7hiBx+3p5sNPgd9Tvkd8FzP1DbPqND7PkXDHPgDobvqzCqgPgA2GBxB9ABQBqIMoA3yHlJ1gPuAbxLjobrtfc7rtVA
+
+1wM7FZnI5F3UHLDaCPEQ6LELscgcl8AsLnQuiNWgVaDLwSZkOVNMGTBnsOTRH/JkQVhvwCg7p+CQ7lG9NRhWtfoQlD/oSqVJNslC03j61QYR/06UGzAH/IEdafmBwXRoUQ5GEiBv/nS8gwdQ8kYVN9gaiMpwwf08aoTHC3Tpy9J9k90CXHDgh+HLRR+IvCGUPYQV4SuDVXmGc/Mr1C1HrTCl7vS4S4dnpqhrLdkau1cAvr2ADQAgBlAFWpAbLmkD
+
+QIgBIwAQBT5AQiiEVYAhGM0c93lWAlwJkgseBQBNAJkhGGPEBcAgaAY8soAXcLgAXcOP1DblUs98LFNwQEMZ5/pDtuWm/NFqN50LGMG5e9JMpHUMNEkFHMhU1usgiEHIxS6qAcM1Hb1sDqG8woUf8I3kMsooVaCd4bbDlTvbDEgt0ClikfC8mCX517OlCN6PoxcuEbpCmoN9doIIiMQZ0CGPtad9Nmn9ganUQa3jEMOPtctf4bz82JjIi3sG8B5E
+
+aaY2iO49HYIwU1EbPdoEYO8m+t5s9kggjBoQ58UETfJe+guxN7vG5dQJgAsETgi8Ef7kyEWD4KEaQjmAIQiSkSQiqEQL0cIAaBPwjeB8MJlVSAQit5WDbIHQixp9oK9c1jBJU8dIygrGGY47EnAcXzMGkxzOqCJvEyxZoNVweMDKNHgUbDWGo01BAeFCLYXoirYWf8tjjFCQ/uR1+GjCCThrf8fDkS8XQuwR9qkWZYIUdUeUObBSBNbBqrmVDCXH
+
+PNAwXHwtAR4i8/ludtmsSC/hmD4q/sSAstOdkEGGgoO4EOoqalcjYGJQDhZqh41COyCw/O/U4Tmm8yNHhEcwfoBJAIwwKADexNAO0Ab6u0B8ANRBEgJ0dKgPgA+LrwiVVJVxk4MsI1VFNkPYlxgYLPM5/QvXMlDAJES8NjAheDUwNBlxA10gJ880DRQNEU3U3oSqNEXrnsRARYNkbpWtemhh9dkUT9HYc6DSfvlVT4TYj0Vj7dDBEAtafvjBKkk6
+
+gTTMKQEYVb5Jvl4il4W0t0IVHCmgq6dWHkEjASEzBNRPSjHvMxlA3iTBKYHQ0nZGyjRhCGcs4d40kkUUM5fnTCFfgzCRoTLcELnN1nPpKpNbimBMAHEUckHeweADeA9wPmVagDGkcINR50NghcpQeAgkWs/wpHu/kREQYcZpppAXflQhqEEoYBqqkIRkBJJ8wR8DNMFxVDtGwIpiP4Q14fC9zYX78XesLUmVoKjd4co4TEQDDD4Qsstgal0CPind
+
+czAyjkFMQ901Ggkpmv2AHThJ5H4Xo11zvWRNUZ/9nUDKNuRviCv4XV1ufoEj6oU28h/NVMOkAWjUJG3cS0ZQRPJOOp9hFTDIzgXD5fkgiPUQ5cvUevcfURNCL2I8xVoTABGgPSAFQtfddfpVh2eGGsInAJBRjoqDsrIBZl0LlMWutV0/ngf0NICvJwTPJ5efF8JXbhVMhpBOoCgfm1gQch8voWUCL/o2jB6lID8rqPUz4Q1h7brRYMptncoTDsJC
+
+rPOdkYYkRelDiDs/niCXji8iBgXNs/hgiBSqLCQMvE4V/jgggxQHm5ewLfAZ2szBdaPXgh1ClQhyBCigipsC03jSxoqhiFY8gaAKAERUvIGyISQBFx6AMVJnAO0NkmqED0GhQplDDjQJEMVgYvgsp2xKX1Xus9M5Pk8CxnBJJXgQDwE0HycvgYq5v+H8DYMXYcdERFCVkXWjS2uldw7pld8nig8XgvvDpUU+5qNhf46isrVeAHRsyHvNY22IURMQ
+
+SsoWNGbYu9gfDrFBRiTNrW8iQYMDQARAAkqKa0zOEl4stIcBJLClRZLFOo6MZMlpyGCNDjIQF3wAJjYTgnduQdr892qtckTiid8RhFs5OlNCk7PhgbwJUArHjeAcINgAbQIiitgMoBk8s0jn3rzhtgveEHoQGCxjq3JeWCXUsXI94aCJBJOHrsAWeOkDk8IPs54Y91sgWfBWWHswpyi9CQoQf84MW3UEMZaCpAOsjmVihjpal5jwIZhjMiNQ1Xwa
+
+Vd+5sFjRtMf1m0G0CvRgzMJjNJAs7mN9gvLiDnjvFi/EYliaMcljDjG4VFaBwlgcWW4eAOORUGIgCHQul4gGIcZEgFrRtLN8AysVCiKsfmweACcCsRlmlPzj808Ri601XuRB4gJkhHmP0AhAClkBsak0yVK9wh+DPBLIqykDoEQJK0AtiNagjtRWHqCILKCodsV79Wzj78lkTWiGVhqNz/q5jNkaQdoQfscLsdUCDkeNI/PPICCaI09RstfxulLL
+
+xQ4WadccoHCugc6lx0W+V0YXAMQAYYCGILPEpaA5IzIGCEPyCKFHqABAG/l5BgGLxidOIQFUcQtcA6hji3DHhEDQI8xHmB04bwDaAqsX5cVMVKCLsKwQhZvXN29La8DONsBwrOWgpeEYQ7OmCggsaNJKslzj8dq9C9sXZjq0cIDEMSLVRChsjL/sKiJcaKi04vCDpcagA4fgOiizML8fYS9xaOMsQU/tdU34cdRacLNkZLtyt3vNoDnkZXcAcTQc
+
+/hnm5+kT2oMvP4phgZ747aqD4EqDcgrkBW58YB5AEDAMhHcTgDnccAxvjHhFqIETiKAHsBlAMwA+cTuCpIVX4YcJusgcGMJ90NpiHRvzAwJA4RH+GGFcFDeDKFneD8Ngnj9QY+CxRHhRDtLdi5kfb0LkKbDsfqUCBUWh8jEf2c0HpQds/uqdSfgTZvMXqU8dINFGgXy1DSi6MXZGX1tFBrj3Eaz9PEVOjDGAV5OfnHwsIegAZIWvgCIamCcIXhDm
+
+oJmCyIQpCyFJRCCwVtRaIYQTSweWCmIQZwWIRKD+IRxDGwRaBmweYA+IbWCBIcED/6sJC+wQODSAEOCOAJJC8CVgSCCa3hJwV7h5IXOChgv5RFwcuCTsB2BwAE9BSUHAA4AEaBnEMetpgKiBMgBxCSKMsAGAIQAEAMP14MdsoY0qYTZNnoTcogCxaoseB9AEaAU8Voj3ocicRAJ8gUwDYTHmMYTN4YUAnCVYSz1jYTyIDKcduN4SXCTYS7Cai8eY
+
+EETrCXZZkHiuUIib4SMgJUACfhYTnCZET0HDHdYiVABXCRkByIPRCaCZWCkiT4SMiX4SiCeRD0yPkTgiRkBRwYwSJAJxC/VOkTMibYTJblu9dUHUSbCTeALvvypMkS0SMgEuJwVprJomOqBggV0T9AHZoRaAkSvQJjRLQC7R9QC243rlr0WJq8Jz+IFhJiYyB9QKlxIWvVIy+KnR90NIFSgEYA2AAYANCUZQCAD4gxllopHJMSQhiQkSi8d6B7SK
+
+QBBiVKASAMQSVFDuBatI8TjwFZYS6K8TM/GwBeoG0TM3MEBP9F8Th8HEhHmByAEkKQBlAGKAAABTzTagCUlZlDwkuEnWsAACUFoGnBygCcQlmAhJ0JIi0cJNxJCylpA241RJFxMsJnyFCJLIHdaUOk4AeN1NG04IrA/BKqiY3X+JoqHnB2oQWAikNKAghO0Jsr3Kgk4M5EPJOdA01FIALIFIAPQBFoHJMgAQpJFJfxM0AAJOKMFxLsAIwDB8OQCV
+
+u1YHc+vxMEJspNWspKDYqhAEYAEXH2JlCJr21ZTCAwQF1JK0GdoZ5E7B+gF6JbYHz++gIMA2CLNJVJKP2wwUYYupP1JhpMgc4ACfII7SbAChI7AQAA==
 ```
 %%
