--- a/基础物理/杨振宁/第十二讲.md
+++ b/基础物理/杨振宁/第十二讲.md
@@ -6,7 +6,7 @@ Today we shall start with the subject of rotation around a fixed axis. You can 
 外部扭矩：$$\tau=\dot{\vec{L}}=\sum_{i} \vec{r}_{i} \times \vec{F}_{i}$$
 This is a very important formula. We apply this formula to this system. Now the axis, we look at the body.Now the axis exerts, different parts of the axis exert different forces on the body. So suppose this is the axis. Let's say at one point the axis exerts a force on the body.So let's say that it has two forces. One along the axis, one perpendicular to the axis. O is the origin. When we write this formula, we always first choose the origin, then write down this formula. Now let O be the origin. X is a point on axis.（这是一个非常重要的公式。我们将这个公式应用于这个系统。现在来看轴，我们观察物体。现在轴施加力，轴的不同部分对物体施加不同的力。假设这是轴。假设在某一点，轴对物体施加一个力。假设它有两个力：一个沿着轴的方向，一个垂直于轴的方向。O 是原点。*当我们写这个公式时，总是先选择原点*，然后写下这个公式。现在设 O 为原点。X 是轴上的一个点。）
 
-![[Pasted image 20251212103517.png]]
+![[Pasted image 20251212200928.png]]
 
 And A and B equal to force, forces on the body by the axis. Axis is O. Now we consider the Z component of this equation. So we consider the right hand side, the torque exerted on the body by A and B. The Z component of the torque exerted by A and B on the body.Okay. R from O to X is upwards. That cross into A gives you something which is perpendicular to the axis. So A does not contribute. B is parallel to R. So B cross R is equal to zero. So both components exert no torque.（A 和 B 等于力，即轴对物体施加的力。轴为 O。现在我们考虑这个方程的 Z 分量。所以我们考虑右手系，即 A 和 B 对物体施加的扭矩。A 和 B 对物体施加扭矩的 Z 分量。好的。从 O 到 X 的 R 是向上的。它与 A 的叉积会得到垂直于轴的结果。因此 A 没有贡献。B 与 R 平行。因此 B 叉乘 R 等于零。所以这两个分量都不产生沿 Z 轴的扭矩。）
 
@@ -18,14 +18,14 @@ $$\dot{L}_{z}=\left( \sum \vec{r} \times \vec{F}_{i} \right)_{z}$$
 
  Okay, next I'm going to discuss a gyroscope.This is a picture that I enlarged from Feynman's book. It's in Section 20, Volume 1. It's a gyroscope. I'm sure many of you have played with a gyroscope.A gyroscope is a heavy wheel, and you make it rotate very fast. And then you put the one end of it on top of a tip. And the strange thing is that this thing, if it rotates fast enough, it would not fall.If you have something like this sticking out, if it doesn't rotate, it will fall down. But if it rotates fast enough, it will not fall down and will perform a complicated motion like Feynman indicated here. We are going to analyze this, but the complete analysis is rather complicated.But let us take a special case of it. So let's have this tip here. And we analyze.（好的，接下来我要讨论一个陀螺仪。这是我从费曼的书中放大的一张图片，在第一卷第 20 节。这是一个陀螺仪。我相信你们很多人都玩过陀螺仪。陀螺仪是一个沉重的轮子，你让它快速旋转。然后你把它的一个端点放在一个尖端上。奇怪的是，如果它旋转得足够快，它就不会倒下。如果你有一个像这样伸出来的东西，如果它不旋转，它就会倒下。但如果它旋转得足够快，它就不会倒下，并且会像费曼在这里指出的那样进行复杂的运动。我们将对此进行分析，但完整的分析相当复杂。但让我们来看一个特例。所以让我们在这里有这个尖端。然后我们进行分析。）
 
-![[Pasted image 20251212112741.png]]
+![[Pasted image 20251212201130.png|300]]
 
 陀螺受重力向下，横杆 $\vec{r}$ 方向朝外，因此陀螺整体在重力作用下会产生一个侧向的力矩，而 $$\vec{\tau}=\frac{\mathrm{d}\vec{L}}{\mathrm{d}t}$$所以角动量开始向着力矩方向弯曲，即开始朝逆时针（图中绿色箭头）整体进行*进动*。
 
 Let's assume that this rod is weightless. It's a very strong weightless. So what are the forces on this body? There is a force going mg.There's a force from here, and there's a tension here. Now let us look from the top down. So this is the point, and this is the body.After delta t, it rotates into this way. It rotates in an angle, delta theta. Let us take this point to be the origin.Originally, its angular momentum is along this axis. Afterwards, its angular momentum has changed. So L prime minus L, the absolute value of this, is equal to this distance.This is the original L. （假设这根杆子（穿过陀螺的横杆）是无重量的。它是一种非常坚固的无重量材料。那么作用在这个物体上的力有哪些呢？有一个向下的重力 $mg$，这里有一个作用力，有一个张力。现在让我们从顶部往下看。这个点是支点，这是物体本身。经过 $Δt$ 时间后，它以这种方式旋转，转过一个 $Δθ$ 的角度。我们把这个点设为原点。最初，它的角动量沿着这个轴线。之后，它的角动量发生了变化。因此 $L'$ 减去 $L$ 的绝对值等于这个距离。这就是初始的角动量 L。）
 
 所以，如果我们从上面向下看，会看到陀螺仪整体绕竖直轴逆时针旋转。
-![[Pasted image 20251212105902.png]]
+![[Pasted image 20251212201155.png]]
 
 This is the final L. So that difference is that is equal to L times delta theta. And that is equal to L times omega delta t. Let omega be the angular velocity around z-axis. We take this to be the z-axis.So in this diagram, the z-axis is upwards. So dL dt, the absolute value of dL dt, is equal to L omega. In other words, in that diagram, we are talking about a simple case so that it doesn't have this motion.It just smoothly goes around in a circle. You can do that. You can make it go to that.And we are now talking about this angular velocity, capital omega. But what is this? （这是最终的L。所以这个差异等于L乘以δθ。这等于L乘以ωδt。设ω为绕z轴的角速度。我们将其视为z轴。因此，在这个图中，z轴是向上的。所以 dL/dt 的绝对值等于Lω。换句话说，在那个图中，我们讨论的是一个简单的情况，所以它没有这种运动。它只是平稳地绕着一个圆圈运动。你可以做到这一点。你可以让它变成那样。我们现在讨论的是这个角速度，大写Ω。但 LΩ 这又是什么呢？）
 
