--- a/基础物理/杨振宁/第十四讲.md
+++ b/基础物理/杨振宁/第十四讲.md
@@ -5,6 +5,13 @@ Several students came to me and said that there is a motion which is smoothly ju
 
 $$\frac{mgl}{\Omega}=L-\Omega \cos \theta(ml^2+I_{2})$$
 
+----------------
+
+关于这个公式，杨老并未给出推导细节，而是直接给出这样的公式
+
+
+
+
 Omega is the angular velocity around the z-axis, if it goes smoothly. I2, this top, this gyroscope has an I1, which is the main one.But it has three angular momenta. It has three principal axes of inertia. And one of them is I1, the other two are I2 and I3, which are supposed to be the same.Then it can have this formula. If cosine theta is zero, namely if theta is 90 degrees, this becomes exactly the formula that I had derived in class. But at that time, I thought that that's only an approximation.For theta equal to zero, I thought it's an approximation. （如果运转平稳，$\Omega$ 就是绕 $z$ 轴的角速度。$I_2$，这个陀螺，这个回转仪有一个 $I_1$，这是主要的。但它有三个角动量。它有三个主惯性轴。其中一个是I1，另外两个是 $I_2$ 和 $I_3$，它们应该是相同的。那么它就可以有这个公式。如果 $\cos θ$ 为零，也就是说如果 $θ$ 为 90 度，这就完全变成了我在课堂上推导出的公式。但当时我以为那只是一个近似值。对于 $θ$ 等于零的情况，我以为那是一个近似值。）
 
 Even for theta equal to zero, I thought it's an approximation. But after a careful analysis, it's not an approximation.For theta equal to zero, it was exact. Next, we discuss on a rigid body. If there is a complicated rigid body, it has a center of mass. Now every part of the body is attracted by gravity. This is the real situation. Every part of the body is subject to gravity, depending on the density. If there is a particularly heavy part of that body, then the gravity here is higher. （即便 $θ$ 等于零时，我也以为这是个近似值。但经过仔细分析后发现并非近似——当 $θ$ 为零时，结果是精确值。接下来我们讨论刚体问题。对于一个复杂刚体而言，它必然存在质心。此时物体每个部分都受到重力作用，这才是实际情况。根据密度差异，物体各部位承受的重力各不相同。若某部分质量特别集中，该处受到的重力就会更强。）
