--- a/基础物理/练习题/第 1 章习题.md
+++ b/基础物理/练习题/第 1 章习题.md
@@ -1,53 +1,22 @@
 
-## 1.2 时间
 
-*仅问题 19*
+**问题 18**：（M）由于地球自转逐渐减慢，每天的长度在增加：一个世纪末的一天比世纪初长 1.0 毫秒。在 20 个世纪中，每天时间增加的总和是多少？
+
+**答：** 20世纪的最后一天比第一天长 $20 \text{ 世纪} \times 0.001 \text{ 秒/世纪}= 0.02 \text{ 秒}$。20 世纪期间的平均日长比第一天长 $(0+0.02)/2=0.01$ 秒。由于增长是均匀发生的，累积效应 $T$ 为 $\text{ 每日平均增长量} \times \text{ 天数}= 0.01 \text{ 秒/天} \times 365.25 \text{ 天/年} \times 2000 \text{ 年}=7305 \text{ 秒}$，大约两小时。
+
+--------------------
+
+**问题 19**：（H）假设你在赤道附近的海滩上躺着，观看太阳在平静的海面上落下。当太阳的顶部刚刚消失时，你启动秒表。然后你站起来，使眼睛升高 $h = 1.70$ 米，当太阳的顶部再次消失时停止秒表。如果经过的时间是 $t = 11.1$ 秒，地球的半径 $r$ 是多少？
+
+![[Pasted image 20251217224418.png|300]]
+
+设 $d$ 为点 $B$ 到眼睛的距离：$d^2 + r^2 = (r + h)^2 = r^2 + 2rh + h^2$，即 $d^2 = 2rh + h^2$。由于 $r \gg h$，可忽略 $h^2$ 项，简化为 $d^2 ≈ 2rh$。此时，两个切点 $A$ 与 $B$ 之间的半径夹角为 $θ$，该角度也等于太阳在时间间隔 $t=11.1$ 秒内绕地球转过的角度。$θ$ 值可通过公式 $\theta/360\text{°}=t/24 \text{ h}$ 求得，代入得 $θ = 0.04625\text{°}$。根据 $d = r·\tan θ$ 可得 $d^2 = r^2\tan^2 θ = 2rh$，即 $r = 2h/\tan^2θ$。将 $θ=0.04625$° 和 $h=1.7$ 米代入，最终求得 $r = 5.2\times 10^6$ 米。
+
+------------------------
 
 
-#### 问题 14
-
-（E）一节课时（50 分钟）接近于 1 微世纪。(a) 微世纪有多少分钟？ (b) 使用百分比差异公式计算近似值的百分比差异。（见答案）
-
-#### 问题 15
-
-（E）十四天是一个迷人的英语时间单位，相当于 2.0 周。（“fortnight”这个词是“十四个夜晚”的缩写。）在令人愉快的公司中度过一段时间是件好事，但在不愉快的公司中，微秒的痛苦弦音令人难以忍受。一个十四天有多少微秒？（见答案）
-
-#### 问题 16
-
-（E）时间标准现在基于原子钟。一个有前途的秒标准基于脉冲星，它是旋转的中子星（主要由中子组成的高度紧凑的星体）。有些以极高的稳定性旋转，每次旋转发出一个信标，横扫地球，类似于灯塔信标。脉冲星 PSR 1937 + 21 是一个例子；它每 1.557 806 448 872 ± 3 ms 旋转一次，其中尾数 ±3 表示最后一位小数的不确定性（并不意味着 ±3 毫秒）。(a) PSR 1937 + 21 在 7.00 天内旋转多少次？ (b) 脉冲星精确旋转一百万次需要多少时间？ (c) 相关的不确定性是多少？（见答案）
-
-#### 问题 17
-
-（E）实验室正在测试五个时钟。根据 WWV 时间信号确定的正午时刻，在一周的连续几天中，这些时钟的读数如下表所示。请根据它们作为良好计时器的相对价值对五个时钟进行排名，从最好到最差。请说明你的理由。（见答案）
-
-#### 问题 18
-（M）由于地球自转逐渐减慢，每天的长度在增加：一个世纪末的一天比世纪初长 1.0 毫秒。在 20 个世纪中，每天时间增加的总和是多少？
-
-#### 问题 19
-
-（H）假设你在赤道附近的海滩上躺着，观看太阳在平静的海面上落下。当太阳的顶部刚刚消失时，你启动秒表。然后你站起来，使眼睛升高 $H = 1.70$ 米，当太阳的顶部再次消失时停止秒表。如果经过的时间是 $t = 11.1$ 秒，地球的半径 $r$ 是多少？(好题目)
 
 ## 1.3 质量
-
-#### 问题 20
-
-（E）1992年，新泽西州米尔维尔的一个团队创造了最大的玻璃瓶的记录——他们吹制了一个体积为193美制加仑的瓶子。(a) 这个体积比100万立方厘米少多少？(b) 如果以1.8克/分钟的速度用水填充这个瓶子，需要多长时间？水的密度为1000千克/立方米。
-
-#### 问题 21
-
-地球的质量为 $5.98 \times 10^{24}$ 千克。构成地球的原子的平均质量为 40 原子质量单位。地球上有多少个原子？
-
-#### 问题 22
-
-（E）金是密度为19.32克/立方厘米的最具延展性的金属，可以被压成薄片或拉成细丝。(a) 如果将质量为27.63克的金样品压成厚度为1.000微米的薄片，这个薄片的面积是多少？ (b) 如果将金样品拉成半径为2.500微米的圆柱形细丝，这根细丝的长度是多少？
-
-#### 问题 23
-
-（E）(a) 假设水的密度正好是 $1 \, \text{g/cm}^3$，求出一立方米水的质量（单位：千克）。(b) 假设排空一个容量为 5700 立方米的容器需要 10.0 小时。求出从容器中排出的水的“质量流率”（单位：千克/秒）。
-
-#### 问题 24
-
-（M）加州细沙的颗粒大致是球形，平均半径为50微米，由二氧化硅组成，密度为2600千克/立方米。要使沙粒的总表面积（所有单个球体的总面积）等于边长为1.00米的立方体的表面积，需要多少质量的沙粒？
 
 #### 问题 25
 
@@ -247,3 +216,186 @@
 
 **问题 2：** 图 2.2 显示了一只吉娃娃追逐德国牧羊犬时的加速度 a(t) 随时间变化的曲线。在标出的时间段中，吉娃娃在哪段时间内保持匀速运动？
 
+**问题 3：** 图 2.3 显示了四条路径，物体沿着这些路径从起点移动到终点，所用时间相同。这些路径经过由等距直线组成的网格。请根据以下标准对路径进行排序（从大到小）：(a)物体的平均速度；(b)物体的平均速率。
+
+**问题 4：** 图 2.4 展示了某粒子沿x轴的位置随时间变化的曲线。（a）在t=0时刻，该粒子位置的符号是什么？（b）在t=1秒时，（c）t=2秒时，（d）t=3秒时，该粒子的速度是正值、负值还是零？（e）该粒子总共经过_x=0点_多少次？
+
+**问题 5：** 图 2.5 给出了沿轴运动的粒子的速度。点1位于曲线的最高点；点4位于最低点；点2和点6处于相同高度。(a)在时间t=0时运动方向是什么？(b)在点4时的运动方向是什么？(c)在六个标号点中，粒子在哪些点会反转运动方向？(d)按加速度大小对六个点进行排序，从大到小排列。
+
+**问题 6：** 在 t = 0 时刻，沿 x 轴运动的粒子位于 x₀ = −20 米处。该粒子的初始速度 v₀（在时间 t₀ 时）和恒定加速度 a 的符号在四种情况下分别为：(1) +，+；(2) +，−；(3) −，+；(4) −，−。在哪些情况下，粒子会 (a) 短暂停止，(b) 经过原点，以及 (c) 永远不会经过原点？
+
+**问题 7：** 倚在桥栏杆上，你让一个鸡蛋自由落下（初速度为零），同时将第二个鸡蛋向下抛出。图2.6中哪条曲线表示(a)自由落下的鸡蛋和(b)被抛出的鸡蛋的速度v(t)？（曲线A和B相互平行；C、D、E也相互平行；F和G同样如此。）
+
+**问题 8：** 以下方程给出了粒子在四种情况下的速度v(t)：(a) v = 3；(b) v = 4t² + 2t − 6；(c) v = 3t − 4；(d) v = 5t² − 3。表2.4.1中的方程适用于哪些情况？
+
+**问题 9：** 在图2.7中，一颗奶油柑橘被垂直向上抛过三个等距且高度相同的窗户。请根据以下标准对窗户进行排序（从大到小）：(a)奶油柑橘经过窗户时的平均速度，(b)奶油柑橘经过窗户所需的时间，(c)奶油柑橘经过窗户时的加速度大小，(d)奶油柑橘经过窗户期间速度的变化量Δv。
+
+**问题 10：** 假设一位乘客在首次乘坐热气球时打算吃午餐，却在气球起飞时不慎将一只苹果掉出篮外。在苹果脱手的瞬间，气球正以4.0米/秒²的加速度向上攀升，且具有2米/秒的向上速度。请问：(a) 苹果刚脱手时的加速度大小为多少？(b) 加速度方向如何？(c) 此刻苹果的运动方向是向上、向下还是静止？(d) 此刻苹果的速度大小为多少？(e) 随后短时间内，苹果的运动速度会增大、减小还是保持不变？
+
+**问题 11：** 图 2.8 显示了一个沿x轴运动的粒子经历了三个加速阶段。无需书面计算，请根据这些加速阶段对粒子速度的增加程度进行排序，从大到小排列。
+
+### Problems
+
+以每小时90公里的速度行驶时，如果在剧烈打喷嚏的0.5秒内闭上眼睛，车辆会移动多远？
+
+#### 问题 1：
+
+以 90 公里/小时的速度驾驶汽车时，在剧烈打喷嚏闭眼 0.5 秒期间，车辆会移动多远？
+
+#### 问题 2：
+
+计算以下两种情况下的平均速度：(a) 你以1.22米/秒的速度行走73.2米，然后以3.05米/秒的速度沿直线跑道跑73.2米。(b) 你以1.22米/秒的速度行走1.00分钟，然后以3.05米/秒的速度沿直线跑道跑1.00分钟。(c) 绘制两种情况下的x-t关系图，并在图中标出如何求得平均速度。
+
+#### 问题 3：
+
+一辆汽车以30公里/小时的速度在一条笔直的道路上行驶了40公里。然后，它继续以60公里/小时的速度沿同一方向行驶了另外40公里。(a) 在整个80公里的行程中，汽车的平均速度是多少？（假设它沿正x方向移动。）(b) 平均速率是多少？(c) 绘制x与_t的关系图，并在图上标出如何找到平均速度。
+
+#### 问题 4：
+
+一辆汽车以每小时 40 公里的速度上坡，然后以每小时 60 公里的速度下坡返回。往返的平均速度是多少？
+
+#### 问题 5：
+
+一个沿x轴运动的物体位置由x = 3t − 4t² + t³给出，其中x以米为单位，t以秒为单位。求物体在以下t值时的位置：(a) 1秒，(b) 2秒，(c) 3秒，(d) 4秒。(e) 物体在t=0到t=4秒之间的位移是多少？(f) 从t=2秒到t=4秒这段时间内的平均速度是多少？(g) 绘制x相对于t的图形，0 ≤ t ≤ 4秒，并在图上标出如何找到(f)的答案。
+
+#### 问题 6：
+
+1992年，克里斯·胡伯创造了自行车（人力驱动车辆）的世界速度纪录。他在200米测速区间的成绩是惊人的6.509秒，对此他评论道：“我思故我速！”（Cogito ergo zoom！）。2001年，山姆·惠廷汉姆以比胡伯快19.0公里/小时的速度打破了他的纪录。惠廷汉姆在 200 米测速区间的成绩是多少？
+
+#### 问题 7：
+
+两列火车，每列时速均为30公里，在同一条直轨上相向而行。当两车相距60公里时，一只能以60公里/小时飞行的鸟从一列火车前端起飞，径直飞向另一列火车。到达另一列火车后，（疯狂的）小鸟又径直飞回第一列火车，如此反复。问：在两列火车相撞之前，这只小鸟总共飞行了多远？
+
+#### 问题 8：
+
+恐慌逃生。图2.9展示了一个常见场景：人流试图通过一扇被锁住的出口门逃生。人群以v__s = 3.50米/秒的速度向门口移动，每个人的厚度为d = 0.25米，人与人之间的间隔为L = 1.75米。图2.9中的排列发生在t = 0时刻。(a)门口人群层的厚度以什么平均速率增加？(b)人群层的厚度何时达到5.0米？（这些答案揭示了此类情况_会多快变得危险_。）
+
+#### 问题 9：
+
+在1公里比赛中，跑道1上的选手1（用时2分27.95秒）似乎比跑道2上的选手2（2分28.15秒）更快。然而，跑道2的长度L__2可能略大于跑道1的长度L__1。跑道2与跑道1的长度差L__2 − L__1最大为多少时，我们仍能断定选手1的速度更快？
+
+#### 问题10：
+
+要在测量的（直线）距离d内设定速度记录，赛车必须首先沿一个方向行驶（时间为t₁），然后沿相反方向行驶（时间为t₂）。(a) 为了消除风的影响并获得无风情况下的车速v_c，我们应该计算d/t₁和d/t₂的平均值（方法1），还是应该用d除以t₁和t₂的平均值？(b) 当稳定风沿赛车路线吹动且风速v_w与车速v_c之比为0.0240时，两种方法之间的分数差异是多少？
+
+#### 问题 11：
+
+你需要驾车300公里去参加一场面试。面试时间是11:15。你计划以每小时100公里的速度行驶，因此你决定8:00出发以留出一些额外时间。前100公里你按计划行驶，但之后由于施工，你不得不将速度降至每小时40公里行驶40公里。那么，为了准时参加面试，剩下的路程你至少需要以多快的速度行驶？
+
+#### 问题 12：
+
+交通激波。密集车流中的突然减速会以脉冲形式沿车流方向传播，称为激波，其传播方向可以是下游（顺交通方向）、上游，也可以保持静止。图2.10显示了一列以速度v=25.0米/秒匀速行驶、间距均匀的快速车队，正接近另一列以速度v_s=5.00米/秒匀速行驶的慢速车队。假设每辆快车并入慢车队伍时，会使慢车队伍增加L=12.0米长度（含车身长度与缓冲间距），且快车是在最后一刻突然减速。(a)要使激波保持静止，快车间距d应为多大？若实际间距是该值的两倍，则激波的(b)传播速度与(c)方向（上游或下游）分别是多少？
+
+#### 问题 13：
+
+你从圣安东尼奥沿10号州际公路驱车前往休斯顿，前半段时间以55公里/小时行驶，后半段时间以90公里/小时行驶。返程时，前半段路程以55公里/小时行驶，后半段路程以90公里/小时行驶。求：(a) 从圣安东尼奥到休斯顿的平均速度；(b) 从休斯顿返回圣安东尼奥的平均速度；(c) 整个行程的平均速度；(d) 整个行程的平均速率；(e) 为(a)部分绘制x-t图（假设运动始终沿x轴正方向），并在图中标出如何确定平均速率。
+
+#### 问题 14：
+
+沿x轴运动的电子的位置由x = 16te⁻ᵗ米给出，其中t的单位是秒。当电子瞬时停止时，它离原点有多远？
+
+#### 问题 15：
+
+(a) 若某粒子的位置由x = 4 − 12t + 3t²给出（t单位为秒，x单位为米），则t=1秒时其速度为多少？(b) 此时粒子沿x轴正方向还是负方向运动？(c) 此时速率是多少？(d) 此时速率是增大还是减小？（尝试不通过额外计算回答以下两问）(e) 是否存在瞬时速度为零的时刻？若存在给出时间t值；若不存在回答"否"。(f) 在t=3秒后是否存在粒子沿x轴负方向运动的时刻？若存在给出时间t值；若不存在回答"否"。
+
+#### 问题 16:
+
+一个粒子沿x轴运动的位置函数x(t)为x = 4.0 − 6.0t²，其中x的单位是米，t的单位是秒。(a)粒子在何时(b)在何位置会(瞬时)停止？(c)在什么负时间和(d)正时间粒子会通过原点？(e)绘制x随t变化的图像，时间范围为−5秒到+5秒。(f)为了使曲线在图像上向右移动，我们应该在x(t)中包含+20t还是−20t项？(g)这种包含会增加还是减少粒子瞬时停止时的x值？
+
+#### 问题 17：
+
+一个沿x轴运动的粒子的位置以厘米为单位由x = 9.75 + 1.50t³给出，其中t的单位是秒。计算：(a) 时间间隔从t = 2.00秒到t = 3.00秒内的平均速度；(b) t = 2.00秒时的瞬时速度；(c) t = 3.00秒时的瞬时速度；(d) t = 2.50秒时的瞬时速度；(e) 当粒子位于t = 2.00秒和t = 3.00秒时的位置中间时的瞬时速度；(f) 绘制x与t的关系图，并在图上标出你的答案。
+
+#### 问题 18：
+
+一个沿x轴运动的粒子位置由x = 12t² − 2t³给出，其中x的单位为米，t的单位为秒。求：(a) 粒子在t = 3.0秒时的位置；(b) 速度；(c) 加速度。(d) 粒子达到的最大正坐标值是多少？(e) 达到该坐标的时间是多少？(f) 粒子达到的最大正速度是多少？(g) 达到该速度的时间是多少？(h) 当粒子瞬时静止时（除t = 0外）的加速度是多少？(i) 求粒子在t = 0到t = 3秒之间的平均速度。
+
+#### 问题 19：
+
+某一时刻，一个粒子在x轴正方向上的速度为18米/秒，2.4秒后其速度变为相反方向的30米/秒。求该粒子在这2.4秒时间间隔内的平均加速度是多少？
+
+#### 问题 20：
+
+(a) 若某粒子的位置由x = 20t − 5t³给出（x单位为米，t单位为秒），何时粒子速度为零？（b）何时加速度为零？（c）在什么时间范围（正或负）内加速度为负值？（d）何时为正值？（e）绘制x(t)、v(t)和a(t)的函数图像。
+
+#### 问题 21：
+
+从t=0到t=5.00分钟，一个人静止站立；从t=5.00分钟到t=10.0分钟，他以2.20米/秒的恒定速度沿直线快步行走。求：(a)在2.00分钟到8.00分钟的时间间隔内，他的平均速度v_avg和(b)平均加速度a_avg是多少？(c)在3.00分钟到9.00分钟的时间间隔内，v_avg和(d)a_avg又是多少？(e)绘制x随t和v随t的变化曲线图，并说明如何从图中得出(a)到(d)的答案。
+
+#### 问题 22：
+
+一个沿x轴运动的粒子的位置，根据方程x = ct² - bt³随时间变化，其中x的单位是米，t的单位是秒。(a)常数c和(b)常数b的单位是什么？设它们的数值分别为3.0和2.0。(c)粒子何时达到其最大正x位置？从t = 0.0秒到t = 4.0秒，(d)粒子移动的距离是多少，(e)它的位移是多少？求它在以下时刻的速度：(f)1.0秒，(g)2.0秒，(h)3.0秒，(i)4.0秒。求它在以下时刻的加速度：(j)1.0秒，(k)2.0秒，(l)3.0秒，(m)4.0秒。
+
+#### 问题 23：
+
+一个初速度为 v₀ = 1.50 × 10⁵ m/s 的电子进入长度为 L = 1.00 cm 的区域，在该区域受到电场加速（图 2.11）。它离开时的速度为 v = 5.70 × 10⁶ m/s。假设加速度恒定，求其加速度是多少？
+
+#### 问题 24：
+
+弹射蘑菇。某些蘑菇通过弹射机制释放孢子。当空气中的水蒸气在附着于蘑菇的孢子上凝结时，水滴在孢子一侧形成，而另一侧则形成一层薄膜。孢子在液滴重量的作用下弯曲，但当薄膜接触到液滴时，液滴中的水分会突然扩散到薄膜中，孢子随即以极快的速度向上弹起，从而被抛向空中。通常，孢子在5.0微米的弹射过程中速度可达1.6米/秒；随后，空气阻力会在1.0毫米的距离内将其速度降为零。利用这些数据并假设加速度恒定，求(a)弹射阶段和(b)减速阶段的加速度（以重力加速度g为单位）。
+
+#### 问题 25：
+
+一辆电动汽车从静止开始沿直线加速，加速度为2.0米/秒²，直至达到20米/秒的速度。随后车辆以1.0米/秒²的恒定减速度减速直至停止。 (a) 从启动到停止共经过多长时间？ (b) 车辆从启动到停止行驶了多远？
+
+#### 问题 26：
+
+一个μ子（一种基本粒子）以5.00×10^6米/秒的速度进入一个区域，然后以1.25×10^14米/秒²的速率减速。（a）μ子停下来需要走多远？（b）绘制μ子的x-t图和v-t图。
+
+#### 问题 27：
+
+一个电子具有恒定的加速度+3.2 m/s²。在某一时刻，其速度为+9.6 m/s。问：(a) 2.5秒前的速度是多少？(b) 2.5秒后的速度是多少？
+
+#### 问题 28：
+
+在干燥路面上，配备优质轮胎的汽车可能以4.92米/秒²的恒定减速度刹车。(a) 若该车初速度为24.6米/秒，需要多长时间才能停下？(b) 在此期间车辆行驶多远？(c) 绘制减速过程中位移-时间(x-t)和速度-时间(v-t)关系图。
+
+#### 问题 29：
+
+某电梯轿厢的总运行距离为190米，最高速度为305米/分钟，从静止开始加速并以1.22米/秒²的加速度减速至静止。(a) 轿厢从静止加速到全速时移动的距离是多少？(b) 从静止开始到静止结束，完成不间断190米运行需要多长时间？
+
+#### 问题 30：
+
+你车上的刹车可以以5.2米/秒²的减速度让你减速。(a) 如果你正以137公里/小时的速度行驶，突然看到一名州警，那么你至少需要多长时间才能将车速降至90公里/小时的限速以下？（这个答案揭示了试图通过刹车来避免雷达或激光枪测速的徒劳。）(b) 画出减速过程中位移x随时间t和速度v随时间t的变化曲线图。
+
+#### 问题 31：
+
+假设一艘在深空中的火箭飞船以恒定的加速度9.8米/秒²运动，这在飞行过程中会产生正常重力的错觉。(a) 如果它从静止开始，需要多长时间才能达到光速的十分之一，光速为3.0×10⁸米/秒？(b) 在此过程中它将飞行多远？
+
+#### 问题 32：
+
+1954年3月，约翰·P·斯塔普上校乘坐火箭推进雪橇以1020公里/小时的速度沿轨道行驶，创造了世界陆地速度纪录。他和雪橇在1.4秒内停了下来（见图2.3.1）。以重力加速度g为单位，他在停止过程中经历了多大的加速度？
+
+#### 问题 33：
+
+一辆以56.0公里/小时行驶的汽车在距离障碍物24.0米时，司机猛踩刹车。汽车在2.00秒后撞上障碍物。(a) 撞击前汽车的恒定加速度大小是多少？(b) 撞击时汽车的行驶速度是多少？
+
+#### 问题 34：
+
+在图2.12中，一辆红色汽车和一辆绿色汽车（除颜色外完全相同）在相邻的车道上沿x轴方向相向而行。在时间t=0时，红色汽车位于x_r=0处，绿色汽车位于x_g=220米处。如果红色汽车以20公里/小时的恒定速度行驶，两车将在x=44.5米处相遇；如果红色汽车以40公里/小时的恒定速度行驶，则两车将在x=76.6米处相遇。求：(a)绿色汽车的初速度；(b)绿色汽车的恒定加速度。
+
+#### 问题 35：
+
+图2.12显示了一辆红车和一辆绿车相向而行。图2.13是它们的运动曲线图，在时间t≠0时，位置x__g0=270米，x__r0=−35.0米。绿车以20.0米/秒的恒定速度行驶，红车从静止开始启动。红车的加速度大小是多少？
+
+#### 问题 36：
+
+一辆汽车沿 x 轴移动，通过900米的距离，从静止开始（x=0）并在静止结束（x=900米）。在前四分之一的距离内，其加速度为+2.25 m/s²。在剩余的距离内，其加速度为-0.750 m/s²。求（a）通过900米的行驶时间，（b）其最大速度，（c）绘制行程中位置x、速度v和加速度a随时间t变化的图形。
+
+#### 问题 37：
+
+图 2.14 展示了一个粒子沿 x 轴做匀加速直线运动的情况。图中垂直方向的刻度设定为xs = 6.0! m。求：(a) 粒子加速度的大小；(b)! 粒子加速度的方向。
+
+#### 问题 38：
+
+38 如果地铁列车乘客可承受的最大加速度为1.34 m/s²，且地铁站间距为806米，问列车在两站之间能达到的最高速度是多少？(b) 两站之间的行驶时间是多少？(c) 如果地铁列车每站停靠20秒，问从一次启动到下一次启动期间列车的最高平均速度是多少？(d) 绘制从一次启动到下一次启动期间x、v和a随时间t变化的曲线图。
+
+
+#### 问题 39
+
+汽车A和B在相邻车道同向行驶。汽车A的位置x如图2.15所示，时间从t=0到t=7.0秒。图的垂直比例尺设定为xs=32.0米。在t=0时，汽车B位于x=0处，速度为12米/秒，并具有负的恒定加速度aB。（a）aB必须为何值时，两车在t=4.0秒时（瞬时）并排行驶（瞬时x值相同）？（b）对于该aB值，两车会并排行驶多少次？（c）在图2.15上绘制汽车B的位置x随时间t的变化曲线。如果加速度aB的大小（d）大于和（e）小于部分（a）的答案，两车将并排行驶多少次？
+
+
+#### 问题 40
+
+当你驶向交通信号灯时，它变成了黄色。你的速度是法定限速v0=55公里/小时；你的最佳减速度大小为a=5.18米/秒²。你开始刹车的最佳反应时间是T=0.75秒。为了避免你的车头在红灯亮起后进入交叉路口，你应该刹车停下还是继续以55公里/小时的速度行驶，如果到交叉路口的距离和黄灯的持续时间分别是(a)40米和2.8秒，以及(b)32米和1.8秒？给出刹车、继续、任意（如果两种策略都可行）或都不（如果两种策略都不可行且黄灯持续时间不合适）的答案。
